# old-meson-ui

./: .editorconfig  .gitattributes  .gitignore  .mailmap  .pylintrc  CODEOWNERS  MANIFEST.in  __main__.py  cmeson.py  dev-requirements.txt  meson-ui.py  pytest.ini  readme.md  requirements.txt  run_backend_tests.py  run_mesonui_tests.py  run_project_tests.py  run_tests.py  run_unittests.py  setup.cfg  setup.py
.circleci/: config.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: codecov_report.yaml  lint_mypy.yml  linux_ci.yml  macos_ci.yml  windows_ci.yml
ci/: ci-requirements.txt
data/: resource.qrc
data/mesonui-layout/: activity_conf.ui  activity_dist.ui  activity_init.ui  activity_install.ui  activity_main.ui  activity_setup.ui  activity_subprojects.ui  activity_wrap.ui
data/mesonui-styles/: dark-style.qss
docs/: genrelnotes.py  meson.build  readme.md  sitemap.txt
docs/markdown/: Additional.md  Backend-reference.md  Builtin-options.md  Contact-information.md  Contributing.md  FAQ.md  Getting-meson-ui.md  Manual.md  Overview.md  Release-notes-for-0.20.0.md  Release-procedure.md  Tutorial.md  Use-of-Python.md  _Sidebar.md  index.md  legal.md
docs/markdown/snippets/: added_compile.md  added_configure.md  added_fetal_warnings.md  added_gnome_backend.md  added_init_support.md  added_subproject.md  added_wrapdb.md  fix_buildsystem_runners.md  fix_intro_dashboard.md  fix_unknown_wipe_flag_in_configure.md  fixed_backends.md  new_ide_backends.md  new_intro_dashboard.md  ninja_commands.md  rm_b_asneeded_and_b_bitcode.md  rm_buildtype_and_optimizations.md  support_more_builtin_options.md  use_cmake_from_mesonui.md
docs/theme/extra/templates/: brand-logo.html  navbar_center.html  navbar_links.html
man/: meson-ui.1
manual-tests/02-subproject/: compress.h  main.cc  meson.build  palindrome.h
manual-tests/02-subproject/subprojects/: unittest-cpp.wrap
manual-tests/03-cmake-build/: CMakeLists.txt  main.cc
mesonui/: cmesoninit.py  cmesonmain.py  mesonuilogs.py  packageinfo.py  projectinfo.py
mesonui/containers/: doublylist.py  queue.py  stack.py
mesonui/dashboard/: projectinfo.py
mesonui/mesonuilib/: backend.py  buildsystem.py  coredata.py  mapmeson.py  utilitylib.py
mesonui/models/: appmodel.py  buildoptions.py  buildsystem.py  project.py  testlogslist.py
mesonui/repository/: dataloader.py  datareader.py  datascanner.py  mesonapi.py
mesonui/ui/: activity_conf.py  activity_dist.py  activity_init.py  activity_install.py  activity_main.py  activity_setup.py  activity_subprojects.py  activity_wrap.py  resource.py
mesonui/view/: conf_activity.py  init_activity.py  main_activity.py  (+3 more)
(+40 files in other folders)
