#  author : Michael Brockus.  
#  contact: <mailto:michaelbrockus@gmail.com>
#  license: Apache 2.0 :http://www.apache.org/licenses/LICENSE-2.0
#
#  copyright 2020 The Meson-UI development team
#
[metadata]
url = https://github.com/michaelbadcrumble/meson-ui
keywords =
  meson-gui
  meson-ui
  meson
  mesonbuild

license = Apache License, Version 2.0
license_file = LICENSE
classifiers =
  Development Status :: 5 - Production/Stable
  Environment :: Console
  Intended Audience :: Developers
  License :: OSI Approved :: Apache Software License
  Natural Language :: English
  Operating System :: MacOS :: MacOS X
  Operating System :: Microsoft :: Windows
  Operating System :: POSIX :: BSD
  Operating System :: POSIX :: Linux
  Programming Language :: Python :: 3 :: Only
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Topic :: Software Development :: Build Tools

[options]
python_requires = >= 3.6.0
